# pdf-writer-rs

./: Cargo.toml
examples/: lorum-ipsum.rs
src/: font_spec.rs  lib.rs  pdf.rs  table.rs  text_style.rs  units.rs
src/drawables/: image.rs  item_list.rs  mod.rs  offset.rs  source_code.rs  table.rs  text.rs  text_box.rs
src/geometry/: length.rs  margins.rs  mod.rs  rectangle.rs  vector2.rs
