[package]
name = "pdf-writer"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
edition = "2018"

[dependencies]
cairo-rs = { version = "0.9.1", default-features = false, features = ["pdf"] }
euclid = "0.22.2"
pango = { version = "0.9.1", default-features = false }
pangocairo = { version = "0.10.0", default-features = false }
